--- a/lab16.html
+++ b/lab16.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <h1>Registro de Usuario</h1>
-    <form class=""formulario" onsubmit=" return validaFormulario()">
+    <form class="formulario" onsubmit=" return validaFormulario()">
         <label>Nombre: </label>
         <input type="text" id="nombre" name="nombre">
         <label>correo electronico: </label>
